View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0031197 | Open CASCADE | OCCT:Visualization | public | 2019-11-26 14:36 | 2021-09-20 11:08 |
Reporter | nds | Assigned To | nds | ||
Priority | normal | Severity | major | ||
Status | new | Resolution | open | ||
Target Version | 7.7.0 | ||||
Summary | 0031197: Visualization - SetTransformPersistence for highlight, select presentations | ||||
Description | SetTransformPersistence should be redefined in SelectMgr_SelectableObject to update state of transform persistent in highlight, select presentations if the presentations have been already created. Also, it's proposed to redefine this method in AIS_InteractiveObject. The proposed functionality is: 1. calling the parent method, 2. after it, performing the functionality of AIS_InteractiveContext::SetTransformPersistent for updating internal context selection/graphical structures automatically. If we forget doing this (moreover there is no a separate method in context with this functionality), the object stays in wrong myObjects container of SelectMgr_SelectableObjectSet. This problem is pretty difficult to predict and discover. | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Branch CR31197 has been created by nds. SHA-1: df3644aa354c932483d89f553b09a2f399135f0f Detailed log of new commits: Author: nds Date: Thu Dec 5 17:15:09 2019 +0300 0031197: Visualization - SetTransformPersistence for highlight, select presentations |
|
Please also provide steps to reproduce (at least in form of pseudo code), as for now it is unclear what kind of scenario patch should fix. |
|
Branch CR31197_1 has been created by nds. SHA-1: 33ffefa2f7c052225012dde159c5001a3cc73ea5 Detailed log of new commits: Author: nds Date: Thu Dec 5 17:15:09 2019 +0300 0031197: Visualization - SetTransformPersistence for highlight, select presentations (cherry picked from commit df3644aa354c932483d89f553b09a2f399135f0f) |
Date Modified | Username | Field | Change |
---|---|---|---|
2019-11-26 14:36 | nds | New Issue | |
2019-11-26 14:36 | nds | Assigned To | => nds |
2019-11-26 15:20 | kgv | Relationship added | related to 0030218 |
2019-12-05 17:15 | nds | Severity | minor => major |
2019-12-05 17:15 | nds | Description Updated | |
2019-12-05 17:17 | git | Note Added: 0089394 | |
2019-12-08 22:30 | kgv | Note Added: 0089453 | |
2019-12-08 22:30 | kgv | Note Edited: 0089453 | |
2020-02-13 00:48 | git | Note Added: 0090505 | |
2020-10-07 08:23 | nds | Target Version | 7.5.0 => 7.6.0 |
2021-09-20 11:08 | kgv | Target Version | 7.6.0 => 7.7.0 |