0031197: Visualization - SetTransformPersistence for highlight, select presentations

(cherry picked from commit df3644aa354c932483d89f553b09a2f399135f0f)
(cherry picked from commit 7731de42d96ab03a3eb39feca46e5585e815d96a)
(cherry picked from commit 31de2e4041c6ffd70f82d9cec39b808b9003d0e2)